--- a/menu_styles.css
+++ b/menu_styles.css
@@ -1,5 +1,6 @@
 .menu { z-index: 10; font-size: 10pt; }
 .menu > .itemList { display: none; border: solid 1px black;  background: white; }
+.menu > .header:hover { color: #999; }
 .menu.active > .header,
 	.menuAction.active
 	{ background: blue; color: white; }
