See R17/R18 in the changelog.txt or http://voracity.org/ftt/201512/make-believe-r17-resumption/ and http://voracity.org/ftt/201601/make-believe-r18-now-in-colour/ .

--- a/_/js/menu/menu_styles.css
+++ b/_/js/menu/menu_styles.css
@@ -1,9 +1,13 @@
 .menu { z-index: 10; font-size: 10pt; }
 .menu > .itemList { display: none; border: solid 1px black;  background: white; }
 .menu > .header:hover { color: #999; }
-.menu.active > .header,
+.menu:not(.bar) .menu > .header { background-image: url(menu-right.svg);
+	background-repeat: no-repeat;
+	background-size: auto 30%; background-position: right 7px top 55%; }
+.menu:not(.bar) .menu.active > .header { background-image: url(menu-right-active.svg); }
+.menu .menu.active > .header,
 	.menuAction.active
-	{ background: blue; color: white; }
+	{ background-color: blue; color: white; }
 .menu.active > .itemList { display: block; }
 .menu > .itemList { box-shadow: 2px 2px 2px rgba(0,0,0,0.3); }
 
